# prism

./: .dockerignore  .gitattributes  .gitignore  .mise.toml  .oxfmtrc.json  CLAUDE.md  Cargo.toml  Dockerfile.rust  Dockerfile.rust.dev  README.md  Tiltfile  buf.gen.yaml  buf.yaml  clippy.toml  flake.nix  prek.toml
crates/: Dockerfile
crates/ps-agent/: Cargo.toml
crates/ps-agent-mcp/: Cargo.toml
crates/ps-agent-mcp/src/: artifact_store.rs  main.rs  prism_client.rs  tools.rs
crates/ps-agent/agent-container/: Dockerfile  opencode.json
crates/ps-agent/agent-container/.opencode/agents/: prism.md
crates/ps-agent/src/: container_manager.rs  event_mapper.rs  lib.rs  pod_spec.rs  workspace_sync.rs
crates/ps-backup/: Cargo.toml
crates/ps-backup/src/: main.rs
crates/ps-core/: Cargo.toml
crates/ps-core/src/: artifact_store.rs  backup.rs  crypto.rs  error.rs  ingestion.rs  lib.rs
crates/ps-core/src/auth/: mod.rs  password.rs  session.rs
crates/ps-core/src/backup/: manifest.rs  mod.rs
crates/ps-core/src/directory/: enrichment.rs  jira_csv.rs  mod.rs  parser.rs
crates/ps-core/src/models/: config.rs  contribution.rs  contribution_data.rs  enums.rs  ingestion.rs  mod.rs  newtypes.rs  person.rs  pipeline.rs  team.rs
crates/ps-core/src/repo/: activity.rs  auth.rs  config.rs  insights.rs  metrics.rs  mod.rs  org.rs  pagination.rs  reasoning.rs
crates/ps-core/src/repo/activity/: contributions.rs  invocations.rs  mod.rs  pipelines.rs  runs.rs  status.rs  watermarks.rs
crates/ps-core/src/repo/metrics/: contributions.rs  discourse.rs  mod.rs  person.rs  snapshots.rs  sources.rs
crates/ps-core/src/repo/org/: export.rs  github_teams.rs  identities.rs  import.rs  memberships.rs  mod.rs  people.rs  resolutions.rs  teams.rs
crates/ps-core/src/repo/reasoning/: api_usage.rs  conversations.rs  embeddings.rs  enrichments.rs  mod.rs
crates/ps-ingestion/: Cargo.toml
crates/ps-ingestion/src/: handler.rs  lib.rs  main.rs  registry.rs
crates/ps-ingestion/src/github/: client.rs  etag.rs  identity.rs  mod.rs  repos.rs  source.rs  types.rs
crates/ps-ingestion/src/handlers/: github_ingestion.rs  github_team_sync.rs  mod.rs
crates/ps-mcp/: Cargo.toml
crates/ps-mcp/src/: artifact_store.rs  main.rs  tools.rs
crates/ps-mcp/src/tools/: convert.rs  format.rs  generate_image.rs  inputs.rs  mod.rs
crates/ps-metrics/: Cargo.toml
crates/ps-metrics/src/: discourse.rs  flow.rs  lib.rs
crates/ps-proto/: Cargo.toml  build.rs
crates/ps-proto/src/: convert.rs  lib.rs
crates/ps-reasoning/: Cargo.toml
crates/ps-reasoning/src/: catalogue.rs  cost.rs  lib.rs  provider.rs  routing.rs  types.rs
crates/ps-reasoning/src/features/: mod.rs
crates/ps-reasoning/src/features/embeddings/: mod.rs  pgvector.rs  text.rs
crates/ps-reasoning/src/features/enrichment/: extract.rs  mod.rs  prompts.rs  types.rs
crates/ps-reasoning/src/features/insights/: mod.rs  types.rs
crates/ps-reasoning/src/providers/: google.rs  mod.rs  openrouter.rs
crates/ps-server/: Cargo.toml
crates/ps-server/src/: directory.rs  interceptor.rs  lib.rs  main.rs
crates/ps-server/src/common/: auth.rs  conversions.rs  mod.rs
crates/ps-server/src/container_manager/: event_mapper.rs  mod.rs
crates/ps-server/src/features/: mod.rs
crates/ps-server/src/features/admin/: mod.rs
crates/ps-server/src/features/auth/: mod.rs
crates/ps-server/src/features/backup/: cancel.rs  create.rs  generator.rs  mod.rs  preview.rs  restore.rs
crates/ps-server/src/features/config/: config_export.rs  handler.rs  mod.rs
crates/ps-server/src/features/dispatch/: grpc.rs  mod.rs
crates/ps-server/src/features/insights/: mod.rs
crates/ps-server/src/features/metrics/: handler.rs  mod.rs
crates/ps-server/src/features/org/: conversions.rs  mod.rs  org_export.rs  people.rs  teams.rs
crates/ps-server/src/features/reasoning/: ai_settings.rs  conversations.rs  convert.rs  cost.rs  embeddings.rs  enrichments.rs  mod.rs  workspace.rs
crates/ps-server/src/services/: admin.rs  auth.rs  common.rs  config.rs  handlers.rs  ingestion.rs  insights.rs  metrics.rs  mod.rs  org.rs  reasoning.rs
crates/ps-server/src/services/handlers/: grpc.rs  mod.rs  restate.rs
crates/ps-server/src/services/metrics/: grpc.rs  mod.rs
crates/ps-server/src/services/org/: conversions.rs  import.rs  mod.rs  people.rs  teams.rs
crates/ps-server/src/services/reasoning/: agent_query.rs  ai_settings.rs  conversations.rs  convert.rs  cost.rs  embeddings.rs  enrichments.rs  mod.rs
crates/ps-workers/: Cargo.toml
crates/ps-workers/src/: lib.rs  main.rs  registry.rs  retry.rs
crates/ps-workers/src/discourse/: client.rs  mod.rs
crates/ps-workers/src/features/: mod.rs
crates/ps-workers/src/github/: client.rs  graphql.rs  mod.rs  repos.rs  source.rs  types.rs
crates/ps-workers/src/handlers/: agent_reaper.rs  agentic_query.rs  discourse_ingestion.rs  embedding.rs  enrichment.rs  github_ingestion.rs  github_team_sync.rs  identity_resolution.rs  ingestion_common.rs  insights.rs  jira_ingestion.rs  metrics_compute.rs  mod.rs  model_catalogue.rs  run_lifecycle.rs  step_registry.rs
crates/ps-workers/src/infra/: mod.rs  registry.rs  retry.rs  run_lifecycle.rs  secrets.rs  state.rs
crates/ps-workers/src/jira/: client.rs  mod.rs
crates/psctl/: Cargo.toml
crates/psctl/src/: client.rs  format.rs  main.rs
crates/psctl/src/commands/: ask.rs  backup.rs  contributions.rs  embed.rs  metrics.rs  mod.rs  people.rs  restore.rs  runs.rs  search.rs  similar.rs  sources.rs  status.rs  trigger.rs
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
tests/integration/src/api/: admin.rs  auth.rs  backup.rs  config.rs  ingestion.rs  metrics.rs  mod.rs  org.rs  pipeline.rs  reasoning.rs
tests/integration/src/common/: container.rs  db.rs  fixtures.rs  macros.rs  mod.rs  server.rs  wiremock_helpers.rs
tests/integration/src/metrics/: discourse.rs  flow.rs  mod.rs  snapshots.rs
tests/integration/src/repo/: activity.rs  auth.rs  config.rs  metrics.rs  mod.rs  org.rs  reasoning.rs
tests/integration/src/source/: discourse.rs  github.rs  jira.rs  mod.rs
(+972 files in other folders)
