[workspace]
members = [
    "crates/ps-core",
    "crates/ps-proto",
    "crates/ps-server",
    "crates/ps-workers",
    "crates/ps-metrics",
    "crates/ps-migrate",
    "crates/psctl",
    "tests/integration",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
license = "AGPL-3.0-or-later"

[workspace.lints.clippy]
# Pedantic baseline
pedantic = { level = "warn", priority = -1 }

# Pedantic allows — noisy or incompatible with our stack
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
needless_pass_by_value = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
similar_names = "allow"
unused_async = "allow"
struct_excessive_bools = "allow"
unnecessary_wraps = "allow"
wildcard_imports = "allow"
used_underscore_binding = "allow"
# too_many_lines — threshold set to 150 in clippy.toml
cast_lossless = "allow"

# Restriction lints — production guardrails
dbg_macro = "deny"
unimplemented = "deny"
todo = "warn"
unwrap_used = "warn"
expect_used = "warn"
print_stdout = "warn"
print_stderr = "warn"
panic = "warn"
indexing_slicing = "warn"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-stream = "0.3"

# Error handling
thiserror = "2"
anyhow = "1"

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json"] }

# gRPC
tonic = "0.13"
tonic-build = "0.13"
tonic-web = "0.13"
tonic-health = "0.13"
prost = "0.13"
prost-types = "0.13"

# Crypto
argon2 = "0.5"
password-auth = "1"
aes-gcm = "0.10"
rand = "0.9"
sha2 = "0.10"
base64 = "0.22"

# HTML parsing
scraper = "0.22"

# CSV parsing
csv = "1"

# HTTP client (for source adapters)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Time
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }

# UUID
uuid = { version = "1", features = ["v7", "serde"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"

# Async trait (needed for dyn Source dispatch)
async-trait = "0.1"

# Restate durable execution SDK
restate-sdk = "0.9"

# Async combinators
futures = "0.3"

# Memory safety
zeroize = "1"

# Testing
wiremock = "0.6"
