[package]
name = "ps-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ps-proto = { path = "../ps-proto" }
kube = { version = "3.1", features = ["runtime", "client", "derive"] }
k8s-openapi = { version = "0.27", features = ["latest"] }
opencode-sdk = "0.1"
tokio.workspace = true
time = { workspace = true, features = ["formatting", "parsing"] }
serde_json.workspace = true
tracing.workspace = true
