[package]
name = "ps-backup"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ps-core = { path = "../ps-core" }
serde.workspace = true
serde_json.workspace = true
time.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zeroize.workspace = true
anyhow.workspace = true
sha2.workspace = true
tar = "0.4"
flate2 = "1"
