[package]
name = "ps-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
time.workspace = true
tracing.workspace = true
sqlx.workspace = true
