[package]
name = "ps-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
time.workspace = true
tracing.workspace = true
sqlx.workspace = true
password-auth.workspace = true
aes-gcm.workspace = true
rand.workspace = true
sha2.workspace = true
base64.workspace = true
hex = "0.4"
