[package]
name = "ps-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
time.workspace = true
tracing.workspace = true
sqlx.workspace = true
reqwest.workspace = true
password-auth.workspace = true
aes-gcm.workspace = true
rand.workspace = true
sha2.workspace = true
base64.workspace = true
async-trait.workspace = true
tokio.workspace = true
zeroize.workspace = true
scraper.workspace = true
csv.workspace = true
pgvector.workspace = true
hex = "0.4"
flate2 = "1"
tar = "0.4"
bytes.workspace = true
url.workspace = true
futures.workspace = true
tempfile.workspace = true
