[package]
name = "ps-ingestion"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ps-core = { path = "../ps-core" }
ps-proto = { path = "../ps-proto" }
tokio.workspace = true
tonic.workspace = true
tonic-health.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
time.workspace = true
async-trait.workspace = true
thiserror.workspace = true

[dev-dependencies]
wiremock.workspace = true
