[package]
name = "ps-metrics"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ps-core = { path = "../ps-core" }
sqlx.workspace = true
time = { workspace = true, features = ["macros"] }
tracing.workspace = true
uuid.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
futures.workspace = true
