[package]
name = "ps-reasoning"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ps-core = { path = "../ps-core" }
async-trait.workspace = true
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
time = { workspace = true, features = ["macros"] }
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
