[package]
name = "ps-reasoning"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ps-core = { path = "../ps-core" }
rig-core = { version = "0.33.0", features = ["derive"] }
schemars = "1.2.1"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
time = { workspace = true, features = ["macros"] }
tokio.workspace = true
tracing.workspace = true
