[package]
name = "ps-reasoning"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ps-core = { path = "../ps-core" }
reqwest = { workspace = true, features = ["json"] }
rig-core = { version = "0.33.0", features = ["derive"] }
schemars = "1.2.1"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2 = "0.10"
thiserror.workspace = true
time = { workspace = true, features = ["macros"] }
tokio.workspace = true
tracing.workspace = true
