[package]
name = "ps-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ps-core = { path = "../ps-core" }
ps-proto = { path = "../ps-proto" }
ps-metrics = { path = "../ps-metrics" }
ps-reasoning = { path = "../ps-reasoning" }
tokio.workspace = true
tokio-stream.workspace = true
async-stream.workspace = true
tonic.workspace = true
tonic-web.workspace = true
tonic-health.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true
prost-types.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
time = { workspace = true, features = ["macros"] }
tower = { version = "0.5", features = ["util"] }
http = "1"
http-body = "1"
rand.workspace = true
regex = "1"
reqwest.workspace = true
base64.workspace = true
zeroize.workspace = true
futures.workspace = true
object_store.workspace = true
url.workspace = true
kube = { version = "3.1", features = ["runtime", "client", "derive"] }
k8s-openapi = { version = "0.27", features = ["latest"] }
opencode-sdk = "0.1"
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }
