[package]
name = "ps-workers"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ps-core = { path = "../ps-core" }
ps-metrics = { path = "../ps-metrics" }
ps-proto = { path = "../ps-proto" }
ps-reasoning = { path = "../ps-reasoning" }
tokio.workspace = true
tonic.workspace = true
tonic-health.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
time.workspace = true
async-trait.workspace = true
futures.workspace = true
base64.workspace = true
thiserror.workspace = true
restate-sdk.workspace = true
zeroize.workspace = true

[dev-dependencies]
wiremock.workspace = true
