[package]
name = "ps-workers"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ps-core = { path = "../ps-core" }
ps-agent = { path = "../ps-agent", features = ["kube"] }
ps-metrics = { path = "../ps-metrics" }
ps-proto = { path = "../ps-proto" }
ps-reasoning = { path = "../ps-reasoning" }
tokio.workspace = true
tonic.workspace = true
tonic-health.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
time.workspace = true
async-trait.workspace = true
futures.workspace = true
base64.workspace = true
thiserror.workspace = true
restate-sdk.workspace = true
zeroize.workspace = true
kube = { version = "3.1", features = ["client"] }
object_store.workspace = true
url.workspace = true
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
wiremock.workspace = true
