[package]
name = "psctl"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ps-proto = { path = "../ps-proto" }
tokio.workspace = true
tokio-stream.workspace = true
clap.workspace = true
tonic.workspace = true
prost-types.workspace = true
serde_json.workspace = true
time.workspace = true
anyhow.workspace = true
async-stream.workspace = true
dotenvy.workspace = true
uuid.workspace = true

