[package]
name = "ps-integration"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "setup-test-db"
path = "src/bin/setup-test-db.rs"

[lints.clippy]
# Tests use expect/unwrap freely
expect_used = "allow"
unwrap_used = "allow"
panic = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"

[dependencies]
ps-core = { path = "../../crates/ps-core" }
ps-proto = { path = "../../crates/ps-proto" }
ps-server = { path = "../../crates/ps-server" }
ps-workers = { path = "../../crates/ps-workers" }
ps-metrics = { path = "../../crates/ps-metrics" }
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
prost-types.workspace = true
sqlx.workspace = true
uuid.workspace = true
time.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower = { version = "0.5", features = ["util"] }
serde_json.workspace = true
http = "1"
zeroize.workspace = true
testcontainers.workspace = true
testcontainers-modules.workspace = true
libc = "0.2"
wiremock.workspace = true
reqwest.workspace = true
async-trait.workspace = true
futures.workspace = true
ps-reasoning = { path = "../../crates/ps-reasoning" }
